--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,11 +6,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
         <!-- PWA Primary Meta Tags -->
-        <title>MyGitHub Chat</title>
-        <meta name="title" content="MyGitHub Chat" />
+        <title>MyGitHub</title>
+        <meta name="title" content="MyGitHub" />
         <meta
             name="description"
-            content="Real-time chat application with GitHub integration and notification support"
+            content="Explore GitHub in a new way and chat support"
         />
 
         <!-- PWA Manifest -->
