--- a/frontend/public/offline.html
+++ b/frontend/public/offline.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Offline - MyGitHub Chat</title>
+    <title>Offline - MyGitHub</title>
     <style>
         * {
             margin: 0;
